--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 
   <style> qa-bot:not(:defined) {display: none;} </style>
-  <qa-bot style="right: 25%; width: 16rem;">
+  <qa-bot server="https://docsbot.jina.ai" style="right: 25%; width: 16rem;">
       <h3>You can ask questions about our docs. Try:</h3>
       <p>Does Jina support Kubernetes?</p>
       <p>How can I traverse a nested DocumentArray?</p>
