impr: minor changes

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <p>What are the basic concepts in Jina?</p>
   </jina-qa-bot>
 
-  <script type="module" src="./build/index.js"></script>
+  <script type="module" src="./build/jina-qa-bot.js"></script>
 
 </body>
 
