--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
       display: none;
     }
   </style>
-  <jina-qa-bot server="https://docsbot.jina.ai" site="https://docs.jina.ai" theme="dark" target="_blank"
+  <jina-qa-bot server="https://docsbot.jina.ai" site="https://docs.jina.ai" target="_blank"
     style="right: 25%; width: 16.5rem;">
     <h3>You can ask questions about our docs. Try:</h3>
     <p>Does Jina support Kubernetes?</p>
@@ -34,7 +34,7 @@
     <p>What are the basic concepts in Jina?</p>
   </jina-qa-bot>
 
-  <script type="module" src="./build/jina-qa-bot.js"></script>
+  <script type="module" src="./jina-qa-bot.js"></script>
 
 </body>
 
