--- a/src/index.html
+++ b/src/index.html
@@ -26,12 +26,14 @@
       display: none;
     }
   </style>
-  <jina-qa-bot server="https://docsbot.jina.ai" site="https://docs.jina.ai" target="_blank"
-    style="right: 25%; width: 16.5rem;">
-    <h3>You can ask questions about our docs. Try:</h3>
+  <jina-qa-bot server="https://docsbot.jina.ai" site="https://docs.jina.ai" target="_blank" style="">
+
+    <h3>You can ask questions about Jina. Try:</h3>
+    <p>What is Jina?</p>
     <p>Does Jina support Kubernetes?</p>
     <p>How can I traverse a nested DocumentArray?</p>
     <p>What are the basic concepts in Jina?</p>
+
   </jina-qa-bot>
 
   <script type="module" src="./jina-qa-bot.js"></script>
