--- a/src/index.html
+++ b/src/index.html
@@ -18,11 +18,11 @@
   </style>
   <jina-qa-bot server="https://docsbot.jina.ai" site="https://docs.jina.ai" target="_blank" style="">
 
-    <h3>You can ask questions about Jina. Try:</h3>
-    <p>What is Jina?</p>
-    <p>Does Jina support Kubernetes?</p>
-    <p>How can I traverse a nested DocumentArray?</p>
-    <p>What are the basic concepts in Jina?</p>
+    <dt>You can ask questions about Jina. Try:</dt>
+    <dl>What is Jina?</dl>
+    <dl>Does Jina support Kubernetes?</dl>
+    <dl>How can I traverse a nested DocumentArray?</dl>
+    <dl>What are the basic concepts in Jina?</dl>
 
   </jina-qa-bot>
 
