fix: index slotted

--- a/src/index.html
+++ b/src/index.html
@@ -19,10 +19,10 @@
   <jina-qa-bot server="https://docsbot.jina.ai" site="https://docs.jina.ai" target="_blank" style="">
 
     <dt>You can ask questions about Jina. Try:</dt>
-    <dl>What is Jina?</dl>
-    <dl>Does Jina support Kubernetes?</dl>
-    <dl>How can I traverse a nested DocumentArray?</dl>
-    <dl>What are the basic concepts in Jina?</dl>
+    <dd>What is Jina?</dd>
+    <dd>Does Jina support Kubernetes?</dd>
+    <dd>How can I traverse a nested DocumentArray?</dd>
+    <dd>What are the basic concepts in Jina?</dd>
 
   </jina-qa-bot>
 
