fix: reference link

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
       display: none;
     }
   </style>
-  <qa-bot server="https://docsbot.jina.ai" site="https://docs.jina.ai" target="_blank">
+  <qa-bot server="https://docsbot.jina.ai" site="docs.jina.ai" target="_blank">
 
     <dt>You can ask questions about Jina. Try:</dt>
     <dd>What is Jina?</dd>
