feat(text-fragments): internalize text-fragments-polyfill

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,13 @@
       display: none;
     }
   </style>
+  <p>
+    Need some text here.
+  </p>
+  <p>
+    Jina Finetuner Docarray
+    Document
+  </p>
   <qa-bot server="https://docsbot.jina.ai" site="docs.jina.ai" target="_blank">
 
     <dt>You can ask questions about Jina. Try:</dt>
