feat: add animation for the qabot

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
     Jina Finetuner Docarray
     Document
   </p>
-  <qa-bot server="https://jina-ai-jina-docsqa.jina.ai" site="docs.jina.ai" target="_blank">
+  <qa-bot server="https://jina-ai-jina-docsqa.jina.ai" theme="light" site="docs.jina.ai" target="_blank">
   </qa-bot>
 
   <script type="module" src="./qabot.js"></script>
