feat: add slot for bot infomation

--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,7 @@
     Document
   </p>
   <qa-bot server="https://jina-ai-jina-docsqa.jina.ai" theme="light" site="docs.jina.ai" target="_blank">
+  <span slot="name">DocsQA</span>
   </qa-bot>
 
   <script type="module" src="./qabot.js"></script>
