fix: update hint questions config

--- a/src/index.html
+++ b/src/index.html
@@ -23,8 +23,13 @@
     Jina Finetuner Docarray
     Document
   </p>
-  <qa-bot server="https://jina-ai-jina.docsqa.jina.ai" theme="light" site="docs.jina.ai" target="_blank">
-  <span slot="name">DocsQA</span>
+  <qa-bot server="https://jina-ai-jina-docsqa.jina.ai" theme="light" site="docs.jina.ai" target="_blank">
+  <dl slot="hint">
+    <dt>You can tryout qabot easily:</dt>
+    <dd>What is qabot?</dd>
+    <dd>Does qabot support Vue/React/Angular?</dd>
+    <dd>What are the basic concepts in qabot?</dd>
+  </dl>
   </qa-bot>
 
   <script type="module" src="./qabot.js"></script>
