fix: dl for question config

--- a/src/index.html
+++ b/src/index.html
@@ -24,8 +24,14 @@
     Document
   </p>
   <qa-bot server="https://jina-ai-jina.docsqa.jina.ai" theme="light" site="docs.jina.ai" target="_blank"
-    orientation="center">
-    <span slot="name">DocsQA</span>
+    orientation="center" title="DocsQA">
+    <dl>
+      <dt>Welcome to DocsQA! Please ask any question:</dt>
+      <dd>What is Jina</dd>
+      <dd>Does Jina support Kubernetes?</dd>
+      <dd>How can I traverse a nested DocumentArray?</dd>
+    </dl>
+    <span slot="description">@@JinaAI</span>
   </qa-bot>
 
   <script type="module" src="./qabot.js"></script>
