--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,9 @@
       <dd>How can I traverse a nested DocumentArray?</dd>
     </dl>
     <span slot="description">@@JinaAI</span>
+    <span slot="texts">
+      <label for="feedbackThumbUp">666</label>
+    </span>
   </qa-bot>
 
   <script type="module" src="./qabot.js"></script>
