fix: remove keyboard detection

--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,11 @@
 
 
   <script type="module" src="./qabot.js"></script>
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      window.qabot = document.querySelector('qa-bot');
+    });
+  </script>
 
 </body>
 
