feat: color inferance

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
 
   </p>
   <div>
-    <qa-bot server="https://jina-ai-jina.docsqa.jina.ai" theme="light" site="docs.jina.ai" target="_blank"
+    <qa-bot server="https://jina-ai-jina.docsqa.jina.ai" theme="infer" site="docs.jina.ai" target="_blank"
       orientation="center" title="DocsQA">
       <template slot="greetings">
         <dl>
