fix: get theme color from meta element of website

--- a/src/index.html
+++ b/src/index.html
@@ -239,7 +239,7 @@
                 bgImageUrl: undefined,
                 fgColor: undefined,
                 bgColor: undefined,
-                theme: 'light',
+                theme: 'infer',
                 orientation: 'bottom-right',
                 open: undefined,
                 target: '_blank',
