fix: server load

--- a/src/index.html
+++ b/src/index.html
@@ -197,6 +197,7 @@
       <div id="preview" class="qa-bot-container" v-show="activeTab === 'preview'">
         <qa-bot
           :token="model.token"
+          :server="model.server"
           :avatar-src="model.avatarUrl"
           :header-background-src="model.bgImageUrl"
           :bg-color="model.bgColor"
