--- a/src/index.html
+++ b/src/index.html
@@ -176,6 +176,14 @@
         <input class="radio-btn" type="radio" :value="undefined" name="open" v-model="model.open" />No
       </div>
       <div class="config-form-item">
+        <label>Show Tip</label>
+        <input class="radio-btn" type="radio" :value="true" name="tip" v-model="model.showTip" />Yes
+        <input class="radio-btn" type="radio" :value="undefined" name="tip" v-model="model.showTip" />No
+      </div>
+      <div v-if="model.showTip" class="config-form-item">
+        <label>Tip Text</label><input v-model="model.tipText" @change="onUpdate('text')"></input>
+      </div>
+      <div class="config-form-item">
         <label>Target</label>
         <select v-model="model.target">
           <option v-for="item in targets" :key="item" :value="item">{{item}}</option>
@@ -208,11 +216,13 @@
           :orientation="model.orientation"
           :title="model.name"
           :description="model.description"
+          :show-tip="model.showTip"
           :open="model.open">
           <dl slot="greetings">
             <dt>{{model.greeting.title}}</dt>
             <dd v-for="item in model.greeting.questions.split('\n')" :key="item">{{item}}</dd>
           </dl>
+          <span slot="texts" for="tip">{{model.tipText}}</span>
         </qa-bot>
       </div>
       <div id="source" class="source-container" v-show="activeTab === 'source'">
@@ -243,6 +253,8 @@
                 theme: 'infer',
                 orientation: 'bottom-right',
                 open: undefined,
+                showTip: undefined,
+                tipText: 'Hi there 👋 \nAsk our docs!',
                 target: '_blank',
                 greeting: {
                   title: 'Welcome to DocsQA! Please ask any question:',
@@ -285,8 +297,8 @@
             onClickTab(tabName) {
               this.activeTab = tabName;
               if (tabName === 'source') {
-                const template = ` <template>\n  <dl>\n   <dt>${this.model.greeting.title}</dt>${this.questions.map(item => `\n   <dd>${item}</dd>`)}\n  </dl>\n </template>`;
-                this.source = `<qa-bot${this.model.token ? `\ntoken="${this.model.token}"` : ''}${this.model.avatarUrl ? `\navatar-src="${this.model.avatarUrl}"` : ''}${this.model.bgImageUrl ? `\nheader-background-src="${this.model.bgImageUrl}"` : ''}${this.model.bgColor ? `\nbg-color="${this.model.bgColor}"` : ''}${this.model.fgColor ? `\nfg-color="${this.model.fgColor}"` : ''}${this.model.theme ? `\ntheme="${this.model.theme}"` : ''}${this.model.site ? `\nsite="${this.model.site}"` : ''}${this.model.target ? `\ntarget="${this.model.target}"` : ''}${this.model.orientation ? `\norientation="${this.model.orientation}"` : ''}${this.model.name ? `\ntitle="${this.model.name}"` : ''}${this.model.description ? `\ndescription="${this.model.description}"` : ''}${this.model.open ? '\nopen' : ''}>\n${this.model.greeting.title || this.model.greeting.questions ? template : ''}\n</qa-bot>`;
+                const template = ` <template>\n  <dl>\n   <dt>${this.model.greeting.title}</dt>${this.questions.map(item => `\n   <dd>${item}</dd>`)}\n  </dl>${this.model.showTip ? `\n   <span slot="texts" for="tip">${this.model.tipText}</span>` : ''}\n </template>`;
+                this.source = `<qa-bot${this.model.token ? `\ntoken="${this.model.token}"` : ''}${this.model.avatarUrl ? `\navatar-src="${this.model.avatarUrl}"` : ''}${this.model.bgImageUrl ? `\nheader-background-src="${this.model.bgImageUrl}"` : ''}${this.model.bgColor ? `\nbg-color="${this.model.bgColor}"` : ''}${this.model.fgColor ? `\nfg-color="${this.model.fgColor}"` : ''}${this.model.theme ? `\ntheme="${this.model.theme}"` : ''}${this.model.site ? `\nsite="${this.model.site}"` : ''}${this.model.target ? `\ntarget="${this.model.target}"` : ''}${this.model.orientation ? `\norientation="${this.model.orientation}"` : ''}${this.model.name ? `\ntitle="${this.model.name}"` : ''}${this.model.description ? `\ndescription="${this.model.description}"` : ''}${this.model.open ? '\nopen' : ''} ${this.model.showTip ? '\nshow-tip' : ''}>\n${this.model.greeting.title || this.model.greeting.questions ? template : ''}\n</qa-bot>`;
               }
             },
             onUpdate(type, isSlot = false) {
