--- a/src/index.html
+++ b/src/index.html
@@ -234,10 +234,11 @@
             <dt>{{model.greeting.title}}</dt>
             <dd v-for="item in model.greeting.questions.split('\n')" :key="item">{{item}}</dd>
           </dl>
-          <span slot="texts" for="tip">{{model.tipText}}</span>
-          <span slot="unknownAnswer">
-            <span>{{model.unknownAnswer.text}}</span>
-            <a>{{model.unknownAnswer.url}}</a>
+          <!-- vue bug: unable to get the children if using template as the slot -->
+          <span slot="texts">
+            <span for="tip">{{model.tipText}}</span>
+            <span for="unknownAnswerText">{{model.unknownAnswer.text}}</span>
+            <span for="unknownAnswerUrl">{{model.unknownAnswer.url}}</span>
           </span>
         </qa-bot>
       </div>
@@ -317,8 +318,9 @@
             onClickTab(tabName) {
               this.activeTab = tabName;
               if (tabName === 'source') {
-                const template = ` <template>\n  <dl>\n   <dt>${this.model.greeting.title}</dt>${this.questions.map(item => `\n   <dd>${item}</dd>`)}\n  </dl>${this.model.showTip ? `\n   <span slot="texts" for="tip">${this.model.tipText}</span>` : ''}${this.model.unknownAnswer.text || this.model.unknownAnswer.url ? `\n  <span slot="unknownAnswer">${this.model.unknownAnswer.text ? `\n   <span>${this.model.unknownAnswer.text}</span>` : ''}${this.model.unknownAnswer.url ? `\n   <a>${this.model.unknownAnswer.url}</a>` : ''}\n  </span>` : ''}\n </template>`;
-                this.source = `<qa-bot${this.model.token ? `\ntoken="${this.model.token}"` : ''}${this.model.avatarUrl ? `\navatar-src="${this.model.avatarUrl}"` : ''}${this.model.bgImageUrl ? `\nheader-background-src="${this.model.bgImageUrl}"` : ''}${this.model.bgColor ? `\nbg-color="${this.model.bgColor}"` : ''}${this.model.fgColor ? `\nfg-color="${this.model.fgColor}"` : ''}${this.model.theme ? `\ntheme="${this.model.theme}"` : ''}${this.model.site ? `\nsite="${this.model.site}"` : ''}${this.model.target ? `\ntarget="${this.model.target}"` : ''}${this.model.orientation ? `\norientation="${this.model.orientation}"` : ''}${this.model.name ? `\ntitle="${this.model.name}"` : ''}${this.model.description ? `\ndescription="${this.model.description}"` : ''}${this.model.open ? '\nopen' : ''} ${this.model.showTip ? '\nshow-tip' : ''}>\n${this.model.greeting.title || this.model.greeting.questions ? template : ''}\n</qa-bot>`;
+                const defaultTemplate = `\n <template>\n  <dl>\n   <dt>${this.model.greeting.title}</dt>${this.questions.map(item => `\n   <dd>${item}</dd>`)}\n  </dl>\n </template>`;
+                const textsTemplate = `\n <template slot="texts">${this.model.showTip ? `\n   <span for="tip">${this.model.tipText}</span>` : ''}${this.model.unknownAnswer.text ? `\n   <span for="unknownAnswerText">${this.model.unknownAnswer.text}</span>` : ''}${this.model.unknownAnswer.url ? `\n   <span for="unknownAnswerUrl">${this.model.unknownAnswer.url}</span>` : ''}\n </template>`;
+                this.source = `<qa-bot${this.model.token ? `\ntoken="${this.model.token}"` : ''}${this.model.avatarUrl ? `\navatar-src="${this.model.avatarUrl}"` : ''}${this.model.bgImageUrl ? `\nheader-background-src="${this.model.bgImageUrl}"` : ''}${this.model.bgColor ? `\nbg-color="${this.model.bgColor}"` : ''}${this.model.fgColor ? `\nfg-color="${this.model.fgColor}"` : ''}${this.model.theme ? `\ntheme="${this.model.theme}"` : ''}${this.model.site ? `\nsite="${this.model.site}"` : ''}${this.model.target ? `\ntarget="${this.model.target}"` : ''}${this.model.orientation ? `\norientation="${this.model.orientation}"` : ''}${this.model.name ? `\ntitle="${this.model.name}"` : ''}${this.model.description ? `\ndescription="${this.model.description}"` : ''}${this.model.open ? '\nopen' : ''} ${this.model.showTip ? '\nshow-tip' : ''}>${this.model.greeting.title || this.model.greeting.questions ? defaultTemplate : ''}${this.model.showTip || this.model.unknownAnswer.text || this.model.unknownAnswer.url ? textsTemplate : ''}\n</qa-bot>`;
               }
             },
             onUpdate(type) {
