--- a/src/index.html
+++ b/src/index.html
@@ -188,6 +188,13 @@
       <div v-if="model.showTip" class="config-form-item">
         <label>Tip Text</label><textarea v-model="model.tipText" rows="3" @change="onUpdate('text')"></textarea>
       </div>
+      <div class="config-form-item multi-rows">
+        <label>Unknown Answer</label>
+        <div class="inline-block">
+          <label class="inner-label">Text</label><input v-model="model.unknownAnswer.text" @change="onUpdate('text')" /><br />
+          <label class="inner-label">Url</label><input v-model="model.unknownAnswer.url" @change="onUpdate('text')" />
+        </div>
+      </div>
       <div class="config-form-item">
         <label>Target</label>
         <select v-model="model.target">
@@ -227,7 +234,12 @@
             <dt>{{model.greeting.title}}</dt>
             <dd v-for="item in model.greeting.questions.split('\n')" :key="item">{{item}}</dd>
           </dl>
-          <span slot="texts" for="tip">{{model.tipText}}</span>
+          <!-- vue bug: unable to get the children if using template as the slot -->
+          <span slot="texts">
+            <span for="tip">{{model.tipText}}</span>
+            <span for="unknownAnswerText">{{model.unknownAnswer.text}}</span>
+            <span for="unknownAnswerUrl">{{model.unknownAnswer.url}}</span>
+          </span>
         </qa-bot>
       </div>
       <div id="source" class="source-container" v-show="activeTab === 'source'">
@@ -260,6 +272,10 @@
                 open: undefined,
                 showTip: undefined,
                 tipText: 'Hi there 👋 \nAsk our docs!',
+                unknownAnswer: {
+                  text: '',
+                  url: ''
+                },
                 target: '_blank',
                 greeting: {
                   title: 'Welcome to DocsQA! Please ask any question:',
@@ -302,8 +318,9 @@
             onClickTab(tabName) {
               this.activeTab = tabName;
               if (tabName === 'source') {
-                const template = ` <template>\n  <dl>\n   <dt>${this.model.greeting.title}</dt>${this.questions.map(item => `\n   <dd>${item}</dd>`)}\n  </dl>${this.model.showTip ? `\n   <span slot="texts" for="tip">${this.model.tipText}</span>` : ''}\n </template>`;
-                this.source = `<qa-bot${this.model.token ? `\ntoken="${this.model.token}"` : ''}${this.model.avatarUrl ? `\navatar-src="${this.model.avatarUrl}"` : ''}${this.model.bgImageUrl ? `\nheader-background-src="${this.model.bgImageUrl}"` : ''}${this.model.bgColor ? `\nbg-color="${this.model.bgColor}"` : ''}${this.model.fgColor ? `\nfg-color="${this.model.fgColor}"` : ''}${this.model.theme ? `\ntheme="${this.model.theme}"` : ''}${this.model.site ? `\nsite="${this.model.site}"` : ''}${this.model.target ? `\ntarget="${this.model.target}"` : ''}${this.model.orientation ? `\norientation="${this.model.orientation}"` : ''}${this.model.name ? `\ntitle="${this.model.name}"` : ''}${this.model.description ? `\ndescription="${this.model.description}"` : ''}${this.model.open ? '\nopen' : ''} ${this.model.showTip ? '\nshow-tip' : ''}>\n${this.model.greeting.title || this.model.greeting.questions ? template : ''}\n</qa-bot>`;
+                const defaultTemplate = `\n <template>\n  <dl>\n   <dt>${this.model.greeting.title}</dt>${this.questions.map(item => `\n   <dd>${item}</dd>`)}\n  </dl>\n </template>`;
+                const textsTemplate = `\n <template slot="texts">${this.model.showTip ? `\n   <span for="tip">${this.model.tipText}</span>` : ''}${this.model.unknownAnswer.text ? `\n   <span for="unknownAnswerText">${this.model.unknownAnswer.text}</span>` : ''}${this.model.unknownAnswer.url ? `\n   <span for="unknownAnswerUrl">${this.model.unknownAnswer.url}</span>` : ''}\n </template>`;
+                this.source = `<qa-bot${this.model.token ? `\ntoken="${this.model.token}"` : ''}${this.model.avatarUrl ? `\navatar-src="${this.model.avatarUrl}"` : ''}${this.model.bgImageUrl ? `\nheader-background-src="${this.model.bgImageUrl}"` : ''}${this.model.bgColor ? `\nbg-color="${this.model.bgColor}"` : ''}${this.model.fgColor ? `\nfg-color="${this.model.fgColor}"` : ''}${this.model.theme ? `\ntheme="${this.model.theme}"` : ''}${this.model.site ? `\nsite="${this.model.site}"` : ''}${this.model.target ? `\ntarget="${this.model.target}"` : ''}${this.model.orientation ? `\norientation="${this.model.orientation}"` : ''}${this.model.name ? `\ntitle="${this.model.name}"` : ''}${this.model.description ? `\ndescription="${this.model.description}"` : ''}${this.model.open ? '\nopen' : ''} ${this.model.showTip ? '\nshow-tip' : ''}>${this.model.greeting.title || this.model.greeting.questions ? defaultTemplate : ''}${this.model.showTip || this.model.unknownAnswer.text || this.model.unknownAnswer.url ? textsTemplate : ''}\n</qa-bot>`;
               }
             },
             onUpdate(type) {
